[project]
name = "comfyui-fatlabels"
description = "It's a super simple custom node for Comfy UI, to generate text, with a font size option. Useful for bigger labelling of nodes, helpful for wider screen captures or tutorials. Plus you can of course use the text within your generations."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/aianimation55/ComfyUI-FatLabels"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FatLabels"
Icon = ""
